RegressionTests/TestSuiteExport/reject/missing_semicolon.blade
// EXPECT: fail
// DIAGNOSTICS: E0101

cog var x: u32 = 0